--- a/home.css
+++ b/home.css
@@ -12,9 +12,14 @@ body {
   align-items: center;
 }
 
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .banner {
   width: 100%;
-  height: 900px;
   background: url("./img/bg3.jpg") no-repeat bottom center/cover;
   display: flex;
   flex-direction: column;
@@ -24,9 +29,9 @@ body {
 
 header {
   width: 100%;
-  height: 150px;
+  height: 130px;
   max-width: 1100px;
-  padding: 40px;
+  padding: 20px 40px;
   /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
@@ -47,7 +52,7 @@ nav {
   cursor: pointer;
 }
 
-.travel {
+.travel_title {
   color: rgb(96, 236, 120);
 }
 
@@ -71,32 +76,49 @@ nav {
 /* search holiday section */
 
 main {
+  position: relative;
   width: 100%;
-  max-width: 1000px;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 90px;
   /* border: 1px solid red; */
+}
+
+main > * {
+  margin: auto;
+  max-width: 1000px;
+  /* border: 1px solid black; */
 }
 
 .search__holiday {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   color: white;
-  height: 500px;
+  gap: 10px;
+  /* height: 500px; */
   /* border: 1px solid red; */
 }
 
-.search__holiday > h1 {
+/* Remove x from search bar */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+
+.search__holidays > h1 {
   font-size: 90px;
 }
 
-.search__holiday > h2 {
+.search__holidays > h2 {
   font-size: 30px;
 }
 
 .search__holiday--inputs {
   width: 50%;
-  margin-top: 25px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -104,45 +126,50 @@ main {
 
 .search,
 .date {
-  background-color: rgba(0, 109, 126, 0.5);
-  /* background-color: #47b7cb; */
-  border-radius: 3px;
+  background-color: rgba(10, 53, 91, 0.5);
+  border-radius: 5px;
   border: none;
-  padding: 15px;
+  padding: 10px 15px;
   color: white;
 }
 
+.search > input {
+  font-size: 15px;
+}
+
 .search > input::placeholder {
-  color: white;
+  color: rgb(242, 242, 242);
 }
 
 .search > input:focus {
   outline: none;
 }
 
-.date {
-  display: flex;
+.date > input {
+  width: 140px;
+  text-align: center;
 }
 
+.date > input[type="date"] {
+  outline: none;
+  border: none;
+}
+/* 
 input[type="text"]::-webkit-inner-spin-button,
 input[type="text"]::-webkit-calendar-picker-indicator {
   display: none;
   -webkit-appearance: none;
-}
+} */
 
 .date > input::placeholder {
-  display: none;
+  color: rgb(242, 242, 242);
 }
 
 .search__holiday--inputs > div > input {
   background-color: transparent;
   border-radius: 3px;
   border: none;
-  padding: 15px;
-  color: white;
-}
-
-.search__holiday--inputs > input::placeholder {
+  padding: 10px;
   color: white;
 }
 
@@ -150,9 +177,12 @@ input[type="text"]::-webkit-calendar-picker-indicator {
   background: white;
   border-radius: 3px;
   text-align: center;
+  transition: 0.2s all;
 }
 
 .search__holiday--button {
+  width: 100%;
+  height: 100%;
   border: none;
   padding: 15px;
   font-weight: 700;
@@ -162,25 +192,56 @@ input[type="text"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
 
+.only__for--btnColor:hover {
+  background: rgba(10, 53, 91, 0.8);
+}
+
+.search__holiday--button:hover {
+  background: white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+}
+
 .bora__bora {
+  width: 70%;
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
-  font-size: 35px;
-  width: 100%;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 1.8px;
+  padding-bottom: 20px;
   /* border: 1px solid red; */
-  gap: 10px;
+  gap: 5px;
 }
 
 .search__borabora {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 20px;
+  font-size: 18px;
+}
+
+.search__borabora > button {
+  width: 160px;
+  height: 30px;
+  background: transparent;
+  letter-spacing: 1.8px;
+  justify-content: space-between;
+  color: white;
+  font-weight: 600;
+  font-size: 18px;
+  transition: 0.2s all;
+}
+
+.search__borabora > button:hover {
+  background-color: white;
+  color: rgb(7, 24, 109);
+  border-radius: 5px;
 }
 
 .bora__bora > hr {
-  height: 1.5px;
+  height: 2px;
   border: none;
   background-color: white;
 }
@@ -189,14 +250,21 @@ input[type="text"]::-webkit-calendar-picker-indicator {
 /* ------------------------------------------- */
 
 /* travel planning section */
+.travel {
+  width: 100%;
+  background: #000;
+  margin: auto;
+  /* border: 1px solid black; */
+}
+
 .travel__planning {
   position: absolute;
-  width: 100%;
+  /* width: calc(100% + 100px); */
   max-width: 1200px;
-  margin-left: -100px;
+  padding: 0 40px;
+  left: -50px;
   /* border: 1px solid red; */
   background: white;
-  margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -224,6 +292,11 @@ input[type="text"]::-webkit-calendar-picker-indicator {
   border: 1px solid grey;
   background: white;
   width: 150px;
+}
+
+.selected {
+  color: #00d9ff;
+  border: 1px solid #00d9ff;
 }
 
 .travel__planning--labels > *:hover {
