--- a/home.css
+++ b/home.css
@@ -634,6 +634,45 @@ main {
   border-left: 2px solid #00a6ff;
 }
 
+.travel__deals {
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.october__deals {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 70px;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.canyon__deals {
+  display: flex;
+  gap: 25px;
+  margin-bottom: 100px;
+}
+
+.canyon--text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0 5px;
+}
+
+.canyon > img {
+  width: 100%;
+}
+.price {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Footer */
 footer {
   width: 100%;
