--- a/contact.css
+++ b/contact.css
@@ -19,12 +19,14 @@ button {
 }
 
 .banner {
+  position: relative;
   width: 100%;
-  background: url("./img/contact-bg.jpeg") no-repeat top center/cover;
+  background: url("./img/contact.jpg") no-repeat center center/cover;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 40px;
   align-items: center;
+  height: 100vh;
 }
 
 /* .banner > * {
@@ -35,7 +37,7 @@ button {
 header {
   width: 100%;
   height: 130px;
-  max-width: 1100px;
+  max-width: 1000px;
   padding: 20px 0;
   /* border: 1px solid black; */
   display: flex;
@@ -49,6 +51,10 @@ nav {
   display: flex;
   gap: 20px;
   align-items: center;
+}
+
+.menu {
+  display: none;
 }
 
 .company__name {
@@ -80,42 +86,53 @@ nav {
 .lets__talk {
   color: white;
   font-size: 100px;
-  margin-bottom: 150px;
+  margin-bottom: 90px;
 }
 
 .contact__us {
+  position: absolute;
+  bottom: 0;
   display: flex;
   width: 100%;
 }
 
 .contact__us > * {
-  height: 300px;
+  height: 258px;
   width: 100%;
 }
+
 .contact__us > div > div > i {
   color: #01baef;
 }
+
 .meet__us {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   background: white;
-  padding-left: 40px;
-  padding-top: 20px;
+  padding: 30px 50px;
 }
 
-.meet__us > div {
-  display: flex;
-  gap: 15px;
-}
-.pitch__us {
+.meet__us > .info {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background: rgb(218, 216, 216);
-  padding-left: 40px;
-  padding-top: 20px;
 }
+
+.meet__us > .info > div {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.pitch__us {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background: rgb(218, 216, 216);
+  padding: 30px 50px 0px;
+}
+
 .pitch__us > button {
   margin-top: 15px;
   border: none;
@@ -135,4 +152,62 @@ nav {
   color: #00a6ff;
   outline: 2px solid #01baef;
   cursor: pointer;
+}
+
+/* Responsive Design */
+@media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  nav {
+    max-width: 550px;
+  }
+
+  /* .banner > * {
+    width: 800px;
+    margin: auto;
+  } */
+
+  .search__holidays > h1 {
+    font-size: 80px;
+  }
+
+  .search__holidays > h2 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    position: relative;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    color: white;
+    font-size: 26px;
+  }
+
+  .active {
+    padding: 10px;
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.4);
+  }
 }
