--- a/home.css
+++ b/home.css
@@ -6,6 +6,8 @@
 }
 
 body {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,10 +21,11 @@ button {
 }
 
 .banner {
-  width: 100%;
+  min-width: 100%;
   background: url("./img/bg3.jpg") no-repeat bottom center/cover;
   display: flex;
   flex-direction: column;
+  padding: 0 30px;
   gap: 50px;
   align-items: center;
 }
@@ -49,6 +52,10 @@ nav {
   display: flex;
   gap: 20px;
   align-items: center;
+}
+
+.menu {
+  display: none;
 }
 
 /* Stick the Navbar to the top of the page after scrolling */
@@ -150,6 +157,9 @@ input[type="search"]::-webkit-search-results-decoration {
   border-radius: 5px;
   border: none;
   padding: 10px 15px;
+  display: flex;
+  align-items: center;
+  /* gap: 5px; */
   color: white;
   transition: 0.3s all;
 }
@@ -309,8 +319,8 @@ main {
 }
 
 .travel__planning--labels {
-  /* margin-top: 30px; */
   display: flex;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -414,6 +424,11 @@ main {
   gap: 15px;
 }
 
+.dicover__destinations > h1 {
+  width: 70%;
+  text-align: center;
+}
+
 .dicover__destinations > a {
   text-decoration: none;
   color: #00a6ff;
@@ -447,11 +462,9 @@ main {
 .travel__planning--images {
   /* border: 1px solid black; */
   width: 100%;
-  height: 520px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  overflow: hidden;
 }
 
 .image__container {
@@ -634,61 +647,105 @@ main {
   border-left: 2px solid #00a6ff;
 }
 
+/* Deals Section */
 .travel__deals {
   display: flex;
   flex-direction: column;
-  max-width: 1000px;
+  max-width: 1040px;
   width: 100%;
   align-items: center;
   flex-wrap: wrap;
+  gap: 40px;
+  padding: 80px 20px;
 }
 
 .october__deals {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
-  gap: 10px;
-  margin-bottom: 30px;
+  gap: 20px;
 }
 
 .canyon__deals {
   display: flex;
+  justify-content: center;
   gap: 25px;
-  margin-bottom: 100px;
+}
+
+.canyon {
+  max-width: 450px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  gap: 5px;
+  cursor: pointer;
+  text-align: left;
+}
+
+.canyon > p {
+  position: absolute;
+  top: 100px;
+  color: transparent;
+  font-weight: 600;
+  font-size: 20px;
+  z-index: 10;
+  transition: 0.2s all;
+}
+
+/* .canyon:hover p {
+  color: white;
+} */
+
+.canyon:hover .overlay {
+  opacity: 1;
 }
 
 .canyon--text {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   padding: 0 5px;
 }
 
 .canyon > img {
   width: 100%;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px gray;
 }
+
 .price {
   display: flex;
   justify-content: space-between;
 }
 
-/* Footer */
+/* .Footer_.footer__content */
 footer {
-  width: 100%;
+  flex-wrap: wrap;
+  min-width: 100%;
   background: rgb(54, 54, 54);
 }
+
 footer > *:not(hr) {
   display: flex;
   margin: auto;
-  /* width: calc(100% - 200px); */
+  width: calc(100% - 200px);
   max-width: 1000px;
 }
+
 .footer__content {
-  display: flex;
-  justify-content: space-between;
-  color: white;
   margin-top: 40px;
+  flex-wrap: wrap;
+  display: flex;
+  gap: 50px;
+  justify-content: space-between;
+}
+
+.footer__sections {
+  display: flex;
+  gap: 100px;
+  color: white;
 }
 
 .about,
@@ -706,7 +763,7 @@ footer > *:not(hr) {
 .sections > p,
 .contact--us > p,
 .conditions {
-  color: gray;
+  color: rgb(163, 163, 163);
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -727,7 +784,11 @@ footer > *:not(hr) {
 
 .icons__enter--email {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: space-between;
+  align-items: center;
+  /* border: 1px solid black; */
   align-items: center;
   margin-top: 45px;
   color: white;
@@ -736,37 +797,49 @@ footer > *:not(hr) {
 
 .footer--icons {
   display: flex;
-  gap: 33px;
+  gap: 30px;
 }
+
 .footer--icons > * {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: all 0.15s;
   cursor: pointer;
+  color: rgb(180, 180, 180);
 }
+
 .footer--icons > *:hover {
-  font-size: 24px;
-  color: #00a6ff;
+  font-size: 22px;
+  color: white;
 }
 
 .enter--email {
-  position: relative;
-  display: inline-block;
-}
-.enter--email input {
-  padding: 7px 200px 7px 15px;
-  border: none;
+  width: 350px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px;
   background: rgb(171, 170, 170);
 }
+
+.enter--email input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
 .enter--email i {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
   cursor: pointer;
 }
+
 .enter--email > input::placeholder {
   color: rgb(71, 70, 70);
   overflow: visible;
 }
+
 footer > hr {
   width: 100%;
 }
@@ -778,8 +851,258 @@ footer > hr {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .privacy--conditions {
   display: flex;
   gap: 60px;
 }
+
+.privacy--conditions > p {
+  transition: 0.15s all;
+}
+
+.privacy--conditions > p:hover {
+  color: rgb(242, 242, 242);
+}
 /* ---------------------------------------- */
+
+/* Responsive Design */
+@media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  nav {
+    max-width: 550px;
+  }
+
+  .banner > * {
+    width: 800px;
+    margin: auto;
+  }
+
+  .search__holidays > h1 {
+    font-size: 80px;
+  }
+
+  .search__holidays > h2 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    position: relative;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    color: white;
+    font-size: 26px;
+  }
+
+  .active {
+    padding: 10px;
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.4);
+  }
+
+  .travel__planning--labels,
+  .travel__planning--informations {
+    flex-wrap: wrap;
+  }
+
+  .image__container {
+    width: 400px;
+    height: 220px;
+  }
+
+  .travel__planning--informations > button {
+    width: 200px;
+  }
+
+  .canyon__deals {
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  .footer__content {
+    width: calc(100% - 100px);
+  }
+  .footer__sections {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 850px) {
+  .banner > * {
+    width: calc(100% - 70px);
+  }
+
+  .search__holidays > h1 {
+    font-size: 70px;
+  }
+
+  .search__holidays > h2 {
+    font-size: 20px;
+  }
+
+  .search__holiday--inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .bora__bora {
+    width: 100%;
+  }
+
+  .newsletter {
+    padding: 60px 20px;
+  }
+
+  .newsletter__info > h1 {
+    font-size: 26px;
+  }
+
+  .newsletter__info > p {
+    font-size: 14px;
+  }
+
+  .newsletter__input {
+    max-width: 90%;
+  }
+
+  .footer__content {
+    justify-content: flex-start;
+    gap: 70px;
+  }
+
+  .footer__sections {
+    gap: 40px;
+  }
+
+  .icons__enter--email {
+    position: relative;
+    left: -50px;
+  }
+
+  .conditions {
+    flex-wrap: wrap;
+    gap: 30px;
+    position: relative;
+    left: -40px;
+  }
+
+  .privacy--conditions {
+    gap: 40px;
+  }
+}
+
+@media (max-width: 560px) {
+  .banner > * {
+    width: calc(100% - 20px);
+  }
+
+  .travel__planning > h1,
+  .dicover__destinations > h1 {
+    font-size: 22px;
+    width: 80%;
+  }
+
+  .travel__planning--informations > div {
+    max-width: 90%;
+  }
+
+  .travel__planning--links {
+    flex-wrap: wrap;
+  }
+
+  .newsletter {
+    padding: 50px 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  .company__name {
+    font-size: 18px;
+  }
+
+  .search__holidays > h1 {
+    font-size: 55px;
+  }
+
+  .search__holidays > h2 {
+    font-size: 18px;
+  }
+
+  .bora__bora {
+    font-size: 24px;
+  }
+
+  .search__borabora {
+    font-size: 13px;
+  }
+
+  .search__borabora > button {
+    width: 120px;
+    height: 30px;
+
+    font-size: 14px;
+  }
+
+  .search,
+  .date {
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .search > input {
+    font-size: 12px;
+    width: 80%;
+  }
+
+  .date {
+  }
+
+  .date > input {
+    width: 125px;
+    font-size: 12px;
+  }
+
+  .travel__planning--labels > * {
+    padding: 10px 20px;
+    width: 135px;
+  }
+
+  .image__container {
+    width: 320px;
+    height: 180px;
+  }
+
+  .newsletter__input {
+    width: 100%;
+  }
+
+  .enter--email {
+    /* min-width: 250px; */
+    padding: 7px;
+  }
+}
