--- a/login.css
+++ b/login.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 button {
@@ -19,14 +20,15 @@ button {
 }
 
 .banner {
+  position: relative;
   width: 100%;
   background: url("./img/login-bg.webp") no-repeat bottom center/cover;
   display: flex;
   flex-direction: column;
-  gap: 50px;
-  align-items: center;
   justify-content: center;
-  height: 100%;
+  gap: 50px;
+  padding-bottom: 30px;
+  align-items: center;
 }
 
 .banner > * {
@@ -51,6 +53,10 @@ nav {
   display: flex;
   gap: 20px;
   align-items: center;
+}
+
+.menu {
+  display: none;
 }
 
 .company__name {
@@ -78,32 +84,42 @@ nav {
   background-color: white;
   color: #00a6ff;
 }
-
 /* log in form */
 
 .login__form {
-  color: gray;
+  position: relative;
+  bottom: 35px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   background: white;
+  color: gray;
   border-radius: 20px;
-  padding: 30px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-bottom: 100px;
 }
 .login__form > h1 {
   color: black;
   margin: 30px 0;
 }
 
-.login__form > input {
+.login__form > form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.login__form > form > input {
   border-radius: 10px;
   border: 1px solid gray;
   padding: 15px;
 }
 
-.login__form > button {
+.login__form > form > input:focus {
+  outline: 2px solid rgb(253, 97, 97);
+}
+
+.login__form > form > button {
   background: rgb(253, 97, 97);
   border-radius: 7px;
   padding: 15px;
@@ -111,8 +127,8 @@ nav {
   font-weight: 700;
   transition: all 0.2s;
 }
-.login__form > button:hover {
-  transform: scale(1.02);
+.login__form > form > button:hover {
+  background-color: rgb(176, 36, 36);
 }
 
 .login__form > hr {
@@ -127,12 +143,14 @@ nav {
   transition: all 0.2s;
 }
 .login__form > p > button:hover {
-  border-bottom: 1px solid rgb(253, 97, 97);
+  color: rgb(176, 36, 36);
+  border-bottom: 1px solid rgb(176, 36, 36);
 }
 
 .sign__with--other {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .sign__with--other > div {
@@ -149,6 +167,61 @@ nav {
 }
 
 .sign__with--other > div > i:hover {
-  transform: scale(1.075);
-  border: none;
+  color: white;
+  background: rgb(253, 97, 97);
+  border: 1px solid rgb(253, 97, 97);
+}
+
+/* Responsive Design */
+@media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  nav {
+    max-width: 550px;
+  }
+
+  .search__holidays > h1 {
+    font-size: 80px;
+  }
+
+  .search__holidays > h2 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    position: relative;
+  }
+
+  nav {
+    display: none;
+    z-index: 10;
+  }
+
+  .menu {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    color: white;
+    font-size: 26px;
+  }
+
+  .active {
+    padding: 10px;
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.6);
+  }
 }
