--- a/home.css
+++ b/home.css
@@ -460,17 +460,22 @@ main {
 }
 
 .travel__planning--images {
-  /* border: 1px solid black; */
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+  max-width: 100rem;
+  height: 50rem;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .image__container {
-  position: relative;
-  width: 450px;
-  height: 250px;
+  position: absolute;
+  top: 0;
+  width: 70%;
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 1s;
 }
 
 .image__container:hover {
@@ -480,6 +485,63 @@ main {
 .image__container > img {
   width: 100%;
   height: 100%;
+}
+
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  border: none;
+  font-family: inherit;
+  color: #333;
+  border-radius: 50%;
+  height: 5.5rem;
+  width: 5.5rem;
+  font-size: 3.25rem;
+  cursor: pointer;
+  transition: all 0.2s;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.slider__btn--left {
+  left: 6%;
+  transform: translate(-50%, -50%);
+}
+
+.slider__btn--right {
+  right: 6%;
+  transform: translate(50%, -50%);
+}
+
+.dots {
+  position: absolute;
+  bottom: 48%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dots__dot {
+  border: none;
+  background-color: #b9b9b9;
+  opacity: 0.7;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  margin-right: 1.75rem;
+  cursor: pointer;
+  transition: all 0.5s;
+  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
+}
+
+.dots__dot:last-child {
+  margin: 0;
+}
+
+.dots__dot--active {
+  /* background-color: #fff; */
+  background-color: #888;
+  opacity: 1;
 }
 
 .overlay {
@@ -493,12 +555,7 @@ main {
   justify-content: center;
   align-items: center;
   color: white;
-  background: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Adjust the overlay color and transparency */
+  background: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: 0.3s ease-in-out;
   gap: 50px;
@@ -929,7 +986,7 @@ footer > hr {
     top: 100px;
     display: flex;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.4);
+    background: rgba(43, 42, 42, 0.8);
   }
 
   .travel__planning--labels,
