--- a/login.css
+++ b/login.css
@@ -41,7 +41,6 @@ header {
   height: 130px;
   max-width: 1100px;
   padding: 20px 0;
-  /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -84,22 +83,21 @@ nav {
   background-color: white;
   color: #00a6ff;
 }
-/* log in form */
 
+/* log in form */
 .login__form {
   position: relative;
-  bottom: 35px;
+  bottom: 55px;
   padding: 30px;
   display: flex;
   flex-direction: column;
-  gap: 15px;
   background: white;
   color: gray;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .login__form > h1 {
-  color: black;
+  color: rgb(253, 97, 97);
   margin: 30px 0;
 }
 
@@ -126,6 +124,7 @@ nav {
   color: white;
   font-weight: 700;
   transition: all 0.2s;
+  margin-bottom: 10px;
 }
 .login__form > form > button:hover {
   background-color: rgb(176, 36, 36);
@@ -222,6 +221,22 @@ nav {
     top: 100px;
     display: flex;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(43, 42, 42, 0.8);
+  }
+}
+
+@media (max-width: 850px) {
+  .banner > *:not(.login__form) {
+    width: calc(100% - 100px);
+  }
+}
+@media (max-width: 450px) {
+  .login__form {
+    font-size: smaller;
+  }
+}
+@media (max-width: 410px) {
+  .login__form {
+    font-size: 11px;
   }
 }
