--- a/about.css
+++ b/about.css
@@ -59,6 +59,31 @@ nav {
   display: none;
 }
 
+/* Stick the Navbar to the top of the page after scrolling */
+.scroll {
+  min-width: 100%;
+  padding: 0 150px;
+  height: 80px;
+  background: rgb(54, 54, 54, 0.9);
+  /* outline: 2px solid #00a6ff; */
+  box-shadow: 2px 2px 2px #00a6ff;
+  position: fixed;
+  z-index: 10;
+  transition: 0.3s all;
+}
+.scroll .travel_title {
+  color: #00a6ff;
+}
+
+.scroll .links {
+  background-color: #00a6ff;
+}
+
+.scroll .current {
+  background: white;
+  outline: 3px solid #00a6ff;
+}
+
 .company__name {
   color: rgb(242, 242, 242);
   font-size: 22px;
