--- a/login.css
+++ b/login.css
@@ -7,6 +7,8 @@
 
 body {
   display: flex;
+  height: 100%;
+  width: 100vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -22,13 +24,14 @@ button {
 .banner {
   position: relative;
   width: 100%;
+  height: 100%;
   background: url("./img/login-bg.webp") no-repeat bottom center/cover;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
   gap: 50px;
   padding-bottom: 30px;
-  align-items: center;
 }
 
 .banner > * {
@@ -37,6 +40,7 @@ button {
 }
 
 header {
+  position: relative;
   width: 100%;
   height: 130px;
   max-width: 1100px;
@@ -87,15 +91,15 @@ nav {
 /* log in form */
 .login__form {
   position: relative;
-  bottom: 55px;
-  padding: 30px;
   display: flex;
   flex-direction: column;
+  padding: 30px;
   background: white;
   color: gray;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 .login__form > h1 {
   color: rgb(253, 97, 97);
   margin: 30px 0;
