--- a/login.css
+++ b/login.css
@@ -24,14 +24,14 @@ button {
 .banner {
   position: relative;
   width: 100%;
-  height: 100%;
-  background: url("./img/login-bg.webp") no-repeat bottom center/cover;
+  min-height: 100%;
+  background: url("./img/login-bg.webp") no-repeat center center/cover;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   gap: 50px;
-  padding-bottom: 30px;
+  padding-bottom: 115px;
 }
 
 .banner > * {
@@ -98,6 +98,12 @@ nav {
   color: gray;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.error {
+  height: 15px;
+  color: red;
+  font-size: 14px;
 }
 
 .login__form > h1 {
