--- a/login.css
+++ b/login.css
@@ -98,6 +98,7 @@ nav {
   color: gray;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: -75px;
 }
 
 .error {
@@ -181,6 +182,54 @@ nav {
   border: 1px solid rgb(253, 97, 97);
 }
 
+/* register */
+.login__register {
+  display: flex;
+  gap: 30px;
+  margin-top: -25px;
+}
+.login__form > form li {
+  list-style: none;
+  margin-bottom: 5px;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 10px 30px;
+}
+#submit-btn {
+  background: rgb(253, 97, 97);
+  border-radius: 7px;
+  padding: 13px;
+  color: white;
+  font-weight: 700;
+  transition: all 0.2s;
+  margin-bottom: 10px;
+  border: none;
+  width: 75%;
+  margin-left: 50px;
+}
+#submit-btn:hover {
+  background-color: rgb(176, 36, 36);
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+.back {
+  border: none;
+  color: rgb(253, 97, 97);
+  background: none;
+  cursor: pointer;
+  width: 100px;
+}
+.back:hover {
+  font-weight: 500;
+  color: rgb(223, 65, 65);
+  border-bottom: 1px solid rgb(223, 65, 65);
+}
 /* Responsive Design */
 @media (max-width: 1100px) {
   header {
